
[package]
name = "rust_pay_wf"
version = "0.1.0"
edition = "2021"
authors = ["felix <scybwf@qq.com>"]
description = "A brief description of your crate."
license = "MIT OR Apache-2.0"
keywords = ["keyword1", "keyword2"]


[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
time = "0.3"
openssl = { version = "0.10", features = ["v102"] }
base64 = "0.21"
urlencoding = "1.3"
aes-gcm = "0.10"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.21"
url = "2"